Larger info box to prevent wrapping

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ input[type="radio"]:checked + label {
 
 #info {
 	position: absolute;
-	width: 330px;
+	width: 510px;
 	height: 150px;
 	padding: 10px 15px;
 	box-sizing: border-box;
